set(AUDITOR_AGENT_TARGET "auditor_agent")
file(GLOB_RECURSE ${AUDITOR_AGENT_TARGET}_source_files src/*)
add_executable(${AUDITOR_AGENT_TARGET} ${GUI_TYPE} ${auditor_agent_source_files})
if(WIN32)
    set_target_properties(${AUDITOR_AGENT_TARGET} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MT} COMPILE_DEFINITIONS PROJECT_MODULE="${AUDITOR_AGENT_TARGET}")
endif()
target_link_libraries(${AUDITOR_AGENT_TARGET} audit system network log)
