SET (CMAKE_PREFIX_PATH "C:\\Qt\\Qt5.1.0\\5.1.0\\msvc2012")
FIND_PACKAGE(Qt5Widgets REQUIRED)
SET(CMAKE_AUTOMOC OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES})
ADD_DEFINITIONS(${Qt5Widgets_DEFINITIONS})

include_directories(${CMAKE_CURRENT_BINARY_DIR})

file(GLOB DEBUGGER_SRC_FILES src/*.cpp src/*.hpp)
file(GLOB DEBUGGER_MOC_FILES src/*.hpp)
file(GLOB DEBUGGER_UI_FILES ui/*.ui)
file(GLOB DEBUGGER_RSC_FILES *.qrc)

QT5_ADD_RESOURCES(DEBUGGER_SRC_FILES ${DEBUGGER_RSC_FILES})
QT5_WRAP_CPP(DEBUGGER_MOC_SRC_FILES ${DEBUGGER_MOC_FILES})
QT5_WRAP_UI(DEBUGGER_UI_HEADER_FILES ${DEBUGGER_UI_FILES})

if(WIN32)
	set(DEBUGGER_GUI_TYPE WIN32)
endif(WIN32)

add_executable(
    debugger
    ${DEBUGGER_GUI_TYPE}
	${DEBUGGER_MOC_SRC_FILES}
	${DEBUGGER_SRC_FILES}
	${DEBUGGER_UI_HEADER_FILES}
	${DEBUGGER_MOC_FILES}
)

QT5_USE_MODULES(debugger Widgets)
target_link_libraries(debugger common_md system_md network_md ${QT_LIBRARIES})
set_target_properties(debugger PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MD})
install(TARGETS debugger DESTINATION innocence)
