SET (CMAKE_PREFIX_PATH ${QT_INSTALL_DIR})
FIND_PACKAGE(Qt5Widgets REQUIRED)
SET(CMAKE_AUTOMOC OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES})
ADD_DEFINITIONS(${Qt5Widgets_DEFINITIONS})

include_directories(${CMAKE_CURRENT_BINARY_DIR})

file(GLOB LOGGER_GUI_SRC_FILES src/*.cpp src/*.hpp)
file(GLOB LOGGER_GUI_MOC_FILES src/*.hpp)
file(GLOB LOGGER_GUI_UI_FILES ui/*.ui)
file(GLOB LOGGER_GUI_RSC_FILES *.qrc)

QT5_ADD_RESOURCES(LOGGER_GUI_SRC_FILES ${LOGGER_GUI_RSC_FILES})
QT5_WRAP_CPP(LOGGER_GUI_MOC_SRC_FILES ${LOGGER_GUI_MOC_FILES})
QT5_WRAP_UI(LOGGER_GUI_UI_HEADER_FILES ${LOGGER_GUI_UI_FILES})

if(WIN32)
	set(LOGGER_GUI_TYPE WIN32)
endif(WIN32)

add_executable(
    logger_gui
    ${LOGGER_GUI_TYPE}
	${LOGGER_GUI_MOC_SRC_FILES}
	${LOGGER_GUI_SRC_FILES}
	${LOGGER_GUI_UI_HEADER_FILES}
	${LOGGER_GUI_MOC_FILES}
)

QT5_USE_MODULES(logger_gui Widgets)
target_link_libraries(logger_gui common_md system_md network_md ${QT_LIBRARIES})
set_target_properties(logger_gui PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS_MD})
install(TARGETS logger_gui DESTINATION innocence)



